Experimenting with touch-dnd-custom-events

--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
   <div>Drop zone2</div>
 </div>
 
-<script src="node_modules/systemjs/dist/system.js"></script>
-<script>
-  System.import('./dist/js/main.js');
-</script>
+<script src="dist/js/bundle.js"></script>
 </body>
 </html>
